force-app/main/default/objects/Account/fields/SOI_AddrImpID__c.field-meta.xml
<CustomField>
    <fullName>SOI_AddrImpID__c</fullName>
    <label>SOI_AddrImpID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>