force-app/main/default/objects/Account/fields/SOI_Alternative_Email__c.field-meta.xml
<CustomField>
    <fullName>SOI_alternative_email__c</fullName>
    <label>Alternative Email</label>
    <type>Email</type>
</CustomField>