force-app/main/default/objects/Account/fields/SOI_Alternative_Phone__c.field-meta.xml
<CustomField>
    <fullName>SOI_Alternative_Phone__c</fullName>
    <formula>Contact__r.OtherPhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternative Phone</label>
    <type>Text</type>
</CustomField>