force-app/main/default/objects/Account/fields/SOI_Club_ConsID__c.field-meta.xml
<CustomField>
    <fullName>SOI_Club_ConsID__c</fullName>
    <label>SOI_Club_ConsID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>