force-app/main/default/objects/Account/fields/SOI_Club_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>SOI_Club_Contact_ID__c</fullName>
    <label>Club Contact ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>