force-app/main/default/objects/Account/fields/SOI_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>SOI_Contact_Name__c</fullName>
    <formula>Contact__r.FirstName  + &#39; &#39; +  Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>