force-app/main/default/objects/Account/fields/SOI_ContactModified__c.field-meta.xml
<CustomField>
    <fullName>SOI_ContactModified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox  is checked when user makes changes to the email, phone details or billing address of club and contact</description>
    <label>SOI_ContactModified</label>
    <type>Checkbox</type>
</CustomField>