force-app/main/default/objects/Account/fields/SOI_ContactReplaced__c.field-meta.xml
<CustomField>
    <fullName>SOI_ContactReplaced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if Club contact Name or consId were replaced</description>
    <label>SOI_ContactReplaced</label>
    <type>Checkbox</type>
</CustomField>