force-app/main/default/objects/Account/fields/SOI_Email__c.field-meta.xml
<CustomField>
    <fullName>SOI_Email__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>