force-app/main/default/objects/Account/fields/SOI_first_name__c.field-meta.xml
<CustomField>
    <fullName>SOI_first_name__c</fullName>
    <inlineHelpText>The club contact first name</inlineHelpText>
    <label>First Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>