force-app/main/default/objects/Account/fields/SOI_last_name__c.field-meta.xml
<CustomField>
    <fullName>SOI_last_name__c</fullName>
    <inlineHelpText>Club Contact last name</inlineHelpText>
    <label>Last Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>