force-app/main/default/objects/Account/fields/SOI_Phone__c.field-meta.xml
<CustomField>
    <fullName>SOI_Phone__c</fullName>
    <formula>Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>