force-app/main/default/objects/Account/fields/SOI_Region__c.field-meta.xml
<CustomField>
    <fullName>SOI_Region__c</fullName>
    <label>SOI_Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>