force-app/main/default/objects/Account/fields/SOI_submission_completed__c.field-meta.xml
<CustomField>
    <fullName>SOI_submission_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox is ticked if final document is uploaded from the Submit tab in the portal</description>
    <label>Submission Completed</label>
    <type>Checkbox</type>
</CustomField>