force-app/main/default/objects/Account/fields/SOI_venueSports__c.field-meta.xml
<CustomField>
    <fullName>SOI_venueSports__c</fullName>
    <label>SOI_venueSports</label>
    <length>255</length>
    <type>Text</type>
</CustomField>