force-app/main/default/objects/Account/fields/SOI_Waiting_list__c.field-meta.xml
<CustomField>
    <fullName>SOI_Waiting_list__c</fullName>
    <inlineHelpText>Add here sports to the waiting list if there are any,</inlineHelpText>
    <label>Waiting List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>