force-app/main/default/objects/Account/recordTypes/Club.recordType-meta.xml
<RecordType>
    <fullName>Club</fullName>
    <active>true</active>
    <label>Club</label>
</RecordType>