force-app/main/default/objects/Account/listViews/Clubs.listView-meta.xml
<ListView>
    <fullName>Clubs</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>SOI_Status__c</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <filterScope>Everything</filterScope>
    <label>Clubs</label>
</ListView>